--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
   "prefer-stable": true,
   "require": {
     "craftcms/ckeditor": "^4.4",
-    "craftcms/cms": "5.5.7",
-    "verbb/comments": "^3.0.3",
-    "verbb/navigation": "^3.0.5",
+    "craftcms/cms": "5.6.7",
+    "verbb/comments": "3.0.5",
+    "verbb/navigation": "3.0.6",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
